adding crud operations

--- a/templates/recent.html
+++ b/templates/recent.html
@@ -14,9 +14,9 @@
     <tbody>
         {% for row in data %}
 <tr>
-    <td>{{ row.age_group }}</td>  <!-- Changed from row.p.age_group -->
-    <td>{{ row.sex }}</td>        <!-- Changed from row.p.sex -->
-    <td>{{ row.race }}</td>       <!-- Changed from row.p.race -->
+    <td>{{ row.age_group }}</td>  
+    <td>{{ row.sex }}</td>        
+    <td>{{ row.race }}</td>      
     <td>{{ row.count }}</td>
 </tr>
 {% endfor %}
