--- a/templates/index.html
+++ b/templates/index.html
@@ -6,30 +6,39 @@
     <p class="lead">Graph database-powered analysis of arrest patterns</p>
     <hr class="my-4">
     <div class="row">
-        <div class="col-md-4 mb-4">
-            <div class="card h-100">
+        <div class="col-md-3 mb-4">
+            <div class="card h-100 shadow-sm">
                 <div class="card-body">
                     <h5 class="card-title">Demographic Analysis</h5>
                     <p class="card-text">View age, gender, and race distributions</p>
-                    <a href="/demographics" class="btn btn-primary">View</a>
+                    <a href="/demographics" class="btn btn-primary btn-block">View</a>
                 </div>
             </div>
         </div>
-        <div class="col-md-4 mb-4">
-            <div class="card h-100">
+        <div class="col-md-3 mb-4">
+            <div class="card h-100 shadow-sm">
                 <div class="card-body">
                     <h5 class="card-title">Recent Arrests</h5>
                     <p class="card-text">Last 30 days arrest statistics</p>
-                    <a href="/recent" class="btn btn-primary">View</a>
+                    <a href="/recent" class="btn btn-primary btn-block">View</a>
                 </div>
             </div>
         </div>
-        <div class="col-md-4 mb-4">
-            <div class="card h-100">
+        <div class="col-md-3 mb-4">
+            <div class="card h-100 shadow-sm">
                 <div class="card-body">
                     <h5 class="card-title">Arrest Trends</h5>
                     <p class="card-text">14-day arrest pattern analysis</p>
-                    <a href="/trends" class="btn btn-primary">View</a>
+                    <a href="/trends" class="btn btn-primary btn-block">View</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3 mb-4">
+            <div class="card h-100 shadow-sm">
+                <div class="card-body">
+                    <h5 class="card-title">Manage Arrests</h5>
+                    <p class="card-text">Add, edit, or delete arrest records</p>
+                    <a href="/arrests" class="btn btn-success btn-block">Go</a>
                 </div>
             </div>
         </div>
