--- a/templates/base.html
+++ b/templates/base.html
@@ -2,8 +2,11 @@
 <html>
 <head>
     <title>NYPD Arrest Analysis</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    {# allows child templates to inject extra CSS (e.g. Leaflet) #}
+    {% block head %}{% endblock %}
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -21,5 +24,7 @@
     <div class="container mt-4">
         {% block content %}{% endblock %}
     </div>
+    {# allows child templates to inject extra JS (e.g. Leaflet, Chart.js) #}
+    {% block scripts %}{% endblock %}
 </body>
 </html>
