--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,7 @@
                     <li class="nav-item"><a class="nav-link" href="/demographics">Demographics</a></li>
                     <li class="nav-item"><a class="nav-link" href="/recent">Recent Arrests</a></li>
                     <li class="nav-item"><a class="nav-link" href="/trends">Trends</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/locations">Map</a></li>
                 </ul>
             </div>
         </div>
