--- a/templates/trends.html
+++ b/templates/trends.html
@@ -26,6 +26,7 @@
           <li class="nav-item"><a class="nav-link" href="/demographics">Demographics</a></li>
           <li class="nav-item"><a class="nav-link" href="/recent">Recent Arrests</a></li>
           <li class="nav-item"><a class="nav-link active" aria-current="page" href="/trends">Trends</a></li>
+          <li class="nav-item"><a class="nav-link" aria-current="page" href="/locations">Map</a></li>
         </ul>
       </div>
     </div>
@@ -61,6 +62,7 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script>
     // Data passed from Flask
+    
     const trendData   = {{ data|tojson }};
     const raceData    = {{ race_data|tojson }};
     const ageData     = {{ age_data|tojson }};
