--- a/templates/index.html
+++ b/templates/index.html
@@ -43,5 +43,14 @@
             </div>
         </div>
     </div>
+
+    <!-- ✅ Developer credits -->
+    <hr>
+    <h5>Website developed by:</h5>
+    <ul>
+        <li>Gowtham Reddy Sanjamala</li>
+        <li>Siddhesh Pande</li>
+        <li>Anmol Munnolli</li>
+    </ul>
 </div>
 {% endblock %}
