--- a/templates/new_arrest.html
+++ b/templates/new_arrest.html
@@ -1,31 +1,19 @@
 {% extends "base.html" %}
-
 {% block content %}
-<div class="container mt-4">
-    <h1>Add New Arrest</h1>
-    <form method="post">
-        <div class="form-group">
-            <label for="arrest_key">Arrest Key</label>
-            <input type="number" class="form-control" name="arrest_key" id="arrest_key" required>
-        </div>
-        <div class="form-group">
-            <label for="arrest_date">Arrest Date</label>
-            <input type="date" class="form-control" name="arrest_date" id="arrest_date" required>
-        </div>
-        <div class="form-group">
-            <label for="age_group">Age Group</label>
-            <input type="text" class="form-control" name="age_group" id="age_group" required>
-        </div>
-        <div class="form-group">
-            <label for="sex">Sex</label>
-            <input type="text" class="form-control" name="sex" id="sex" required>
-        </div>
-        <div class="form-group">
-            <label for="race">Race</label>
-            <input type="text" class="form-control" name="race" id="race" required>
-        </div>
-        <button type="submit" class="btn btn-primary">➕ Create</button>
-        <a href="{{ url_for('list_arrests') }}" class="btn btn-secondary">Cancel</a>
-    </form>
-</div>
+<h2>Add New Arrest</h2>
+<form method="POST">
+    <label>Arrest Key:</label><input name="arrest_key" class="form-control"><br>
+    <label>Arrest Date (YYYY-MM-DD):</label><input name="arrest_date" class="form-control"><br>
+    <label>Age Group:</label><input name="age_group" class="form-control"><br>
+    <label>Sex:</label><input name="sex" class="form-control"><br>
+    <label>Race:</label><input name="race" class="form-control"><br>
+    <label>Charge Description (pd_desc):</label><input name="pd_desc" class="form-control"><br>
+    <label>Offense Description (ofns_desc):</label><input name="ofns_desc" class="form-control"><br>
+    <label>Law Category:</label><input name="law_cat_cd" class="form-control"><br>
+    <label>Borough:</label><input name="boro" class="form-control"><br>
+    <label>Precinct:</label><input name="precinct" class="form-control"><br>
+    <label>Latitude:</label><input name="latitude" class="form-control"><br>
+    <label>Longitude:</label><input name="longitude" class="form-control"><br>
+    <button type="submit" class="btn btn-primary">Submit</button>
+</form>
 {% endblock %}
