--- a/templates/trends.html
+++ b/templates/trends.html
@@ -23,10 +23,11 @@
       <a class="navbar-brand" href="/">Crime Analysis</a>
       <div class="collapse navbar-collapse">
         <ul class="navbar-nav me-auto">
-          <li class="nav-item"><a class="nav-link" href="/demographics">Demographics</a></li>
-          <li class="nav-item"><a class="nav-link" href="/recent">Recent Arrests</a></li>
-          <li class="nav-item"><a class="nav-link active" aria-current="page" href="/trends">Trends</a></li>
-          <li class="nav-item"><a class="nav-link" aria-current="page" href="/locations">Map</a></li>
+            <li class="nav-item"><a class="nav-link" href="/demographics">Demographics</a></li>
+            <li class="nav-item"><a class="nav-link" href="/recent">Recent Arrests</a></li>
+            <li class="nav-item"><a class="nav-link" href="/trends">Trends</a></li>
+            <li class="nav-item"><a class="nav-link" href="/locations">Map</a></li>
+            <li class="nav-item"><a class="nav-link" href="/arrests">Manage Arrests</a></li>
         </ul>
       </div>
     </div>
