--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
         </div>
     </div>
 
-    <!-- ✅ Developer credits -->
+    <!--Developer credits -->
     <hr>
     <h5>Website developed by:</h5>
     <ul>
